# splinex

./: LICENSE  README.md  pyproject.toml  test.py
examples/: simple_interpolation.ipynb
splinex/: __init__.py  bspline.py  utils.py
tests/: test_bspline.py
